--- a/css/main.css
+++ b/css/main.css
@@ -450,7 +450,7 @@
       font-size: 0.8em;
       overflow: hidden;
       position: unset;
-      background: url("../img/background_ok9_pc.jpg");
+      background: url("../img/background_ok9_mobile.jpg");
       background-position: bottom;
       background-repeat: no-repeat;
       background-size: 100% 100%;
