--- a/css/main.css
+++ b/css/main.css
@@ -18,7 +18,7 @@
     width: 100vw;
     height: 100vh;
     position: relative;
-    background: url("../img/background_ok9_pc.jpg");
+    background: url("../img/background_ok9.jpg");
     background-position: center;
     background-repeat: no-repeat;
     background-size: 100% 100%;
